kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krishisetu
  namespace: krishisetu

spec:
  replicas: 2

  selector:
    matchLabels:
      app: krishisetu

  template:
    metadata:
      labels:
        app: krishisetu

    spec:
      containers:
      - name: krishisetu
        image: shashankkanade25/krishisetu:v1

        ports:
        - containerPort: 5000

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "256Mi"

        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5

        readinessProbe: 
          httpGet: 
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
