kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: krishisetu-service
  namespace: krishisetu

spec:
  selector: 
    app: krishisetu

  ports:
  - port: 80
    targetPort: 5000
    nodePort: 30080

  type: NodePort
